[package]
name = "bayard-proto"
version = "0.7.3"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"
description = "Protocol Buffers for Bayard"
documentation = "https://bayard-search.github.io/bayard/"
homepage = "https://github.com/bayard-search"
repository = "https://github.com/bayard-search/bayard-proto"
readme = "README.md"
keywords = ["bayard", "protocol-buffers", "grpc"]
categories = ["database"]
license = "MIT"

[dependencies]
futures = "0.1.29"
grpcio = { version = "0.4.7", features = [ "secure" ] }
protobuf = "2.14.0"
raft = "0.4.3"
