[package]
name = "bayard-proto"
version = "0.8.1"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"
description = "Protocol Buffers for Bayard"
documentation = "https://bayard-search.github.io/bayard/"
homepage = "https://github.com/bayard-search"
repository = "https://github.com/bayard-search/bayard-proto"
readme = "README.md"
keywords = ["bayard", "protocol-buffers", "grpc"]
categories = ["database"]
license = "MIT"

[dependencies]
futures = "0.1"
grpcio = { version = "0.4", features = [ "secure" ] }
protobuf = "2.17"
raft = "0.4"
